--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
