--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "element-plus": "^2.9.7",
     "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
